# atoma-agentic-swarm

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: format-check.yml
src/atoma_agentic_workflows/: agents.py  crew.py  main.py  utils.py
src/atoma_agentic_workflows/config/: agents.yaml  tasks.yaml
